--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,15 +6,22 @@
 th {
     color: #595970; 
     background: #efefef; 
-    border-left: 1px solid #595970;
+    border-left: 0.1px solid #cecece;
+    padding: 20px;
 }
 
 td {
-    padding: 20px;
-    
+    padding-left: 20px;
+    padding-bottom: 7px;
+    padding-top: 7px;
+    padding-right: 5px;
+    border-left: 0.1px solid #cecece;
 }
 
 #tabela-ativos {
     border-collapse: collapse;
-    border: 1px solid
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
