--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,14 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .th-ativos {
     padding: 20px;
     padding-right: 500px;  
 }
 
 th {
+    padding-bottom: 10px;
     color: #595970; 
     background: #efefef; 
     border-left: 0.1px solid #cecece;
@@ -20,8 +25,43 @@ td {
 
 #tabela-ativos {
     border-collapse: collapse;
+    margin-bottom: 10px;
 }
 
-body {
+.inputTxtTotal {
+    text-align: right;
+}
+
+.inputPorcentagem {
+    max-width: 100px;
+    margin-right: 10px;
+}
+
+.inputAtivoinvestimento {
+    width: 170px;
+}
+
+.ic_add {
+    padding: 5px;
+}
+
+.btnX {
+    cursor: pointer;
+    src: "./ic_remove.png";
+}
+
+button {
+    background: #e1edfe;
+    cursor: pointer;
+    color: #00638b;
+    width: 61.7%;
+    text-align: left;
+    vertical-align: middle;
     font-family: Arial, Helvetica, sans-serif;
+    border: 0px;
+}
+
+button > img,
+button > span {
+  vertical-align: middle;
 }
